--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,28 @@ h3 {
 	width: 500px;
 }
 
+.ingredient {
+	margin-bottom: 5px;
+}
+
 .procedure {
 	margin-top: 10px;
 	font-style:italic;
+}
+
+.measure {
+	display: inline-block;
+	width: 40px;
+	text-align: right;
+}
+
+.unit {
+	display: inline-block;
+	width: 10px;
+	margin-left: 10px;
+}
+
+.rest {
+	display: inline-block;
+	margin-left: 50px;
 }
