--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,17 @@
 body {
 	font-family: "Helvetica", sans-serif;
-	padding: 15px;
+	padding: 10px;
 	background-image: url("./damask_pattern.png");
 }
 
 .upperContainer {
-	padding: 1px 15px 15px;
 	background-color: rgba(255, 255, 255, 0.9);
 	border-radius: 3px;
+	width: 360px;
+	margin: auto;
+}
+.upperContainerContent {
+	padding: 15px;
 }
 
 .inputContainer {
@@ -15,18 +19,18 @@ body {
 }
 
 .inputsColumn {
-	width: 180px;
+	width: 200px;
 }
 
 .suggestionsColumn {
-	width: 130px;
+	width: 140px;
 }
 
 input {
 	height: 25px;
 	width: 150px;
 	padding-left: 8px;
-	margin-bottom: 20px;
+	margin-bottom: 15px;
 	opacity: 1;
 	border: 1px solid gray;
 	border-radius: 3px;
@@ -57,24 +61,30 @@ input {
 	height: 30px;
 }
 
-h3 {
+h1, h2, h3 {
 	margin: 0 0 15px 0;
+}
+h1 {
+	font-size: 30px;
 }
 
 .results {
-	margin-top: 20px;
+	margin: 20px auto 0 auto;
+	width: 360px;
 }
 
 .match {
-	border: 1px solid black;
+	background-color: white;
 	border-radius: 4px;
 	margin-bottom: 20px;
 	padding: 20px;
-	width: 500px;
+	width: 320px;
 }
 
 .ingredient {
+	display: flex;
 	margin-bottom: 5px;
+	width: 320px;
 }
 
 .procedure {
@@ -83,18 +93,16 @@ h3 {
 }
 
 .measure {
-	display: inline-block;
-	width: 40px;
+	width: 30px;
 	text-align: right;
 }
 
 .unit {
-	display: inline-block;
-	width: 10px;
+	width: 50px;
 	margin-left: 10px;
 }
 
 .rest {
-	display: inline-block;
-	margin-left: 50px;
+	width: 240px;
+	margin-left: 10px;
 }
