--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,13 @@
 body {
 	font-family: "Helvetica", sans-serif;
-	padding: 10px;
 	background-image: url("./damask_pattern.png");
+}
+
+/* 600px and above */
+@media only screen and (min-width: 600px) {
+	body {
+		padding: 10px;
+	}
 }
 
 .topLevelContainer {
