--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
 body {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	font-family: 'Lato', sans-serif;
 	background-image: url("./damask_pattern.png");
 	margin: 10px 0;
@@ -6,6 +9,18 @@ body {
 
 /* 600px and above */
 @media only screen and (min-width: 600px) {
+	body {
+		padding: 10px;
+	}
+
+	.upperContainer {
+		width: 600px;
+		align-self: center;
+	}
+}
+
+/* 360px and above */
+@media only screen and (min-width: 360px) {
 	body {
 		padding: 10px;
 	}
@@ -18,8 +33,7 @@ body {
 }
 
 .topLevelContainer {
-	width: 360px;
-	margin: 0 auto 20px;
+	margin: 20px;
 }
 
 .upperContainer {
@@ -45,12 +59,11 @@ body {
 }
 
 .inputsColumn {
-	width: 200px;
+	width: 55%;
 }
 
 .suggestionsColumn {
-	width: 130px;
-}
+	width: 40%;}
 
 .suggestionHeader {
 	margin-bottom: 5px;
@@ -60,19 +73,28 @@ body {
 	border-bottom: 1px dotted gray;
 }
 
+.inputRow {
+	display: flex;
+	align-items: center;
+	margin-bottom: 15px;
+	width: 100%;
+}
+
 input {
 	height: 25px;
-	width: 150px;
+	width: 80%;
 	padding-left: 8px;
-	margin-bottom: 15px;
 	opacity: 1;
 	border: 1px solid gray;
 	border-radius: 3px;
 }
+input::placeholder {
+  font-style: italic;
+}
 
 .closeIcon {
 	height: 18px;
-	margin: 0 0 -3px 4px;
+	margin-left: 5px;
 	cursor: pointer;
 }
 
@@ -81,12 +103,8 @@ input {
 }
 
 .recipeNameInput {
-	width: 320px;
 	height: 33px;
 	margin-bottom: 0;
-}
-.recipeNameInput::placeholder {
-  font-style: italic;
 }
 
 .suggestion {
@@ -145,11 +163,18 @@ h2.recipeTitle {
 	color: #000000;
 }
 
+.results {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
 .match {
 	background-color: white;
 	border-radius: 4px;
-	margin-bottom: 20px;
+	margin: 0 10px 20px 10px;
 	padding: 20px;
+	height: fit-content;
 	width: 320px;
 }
 
@@ -179,9 +204,17 @@ h2.recipeTitle {
 	margin-left: 10px;
 }
 
-.resultsSummaryContent {
+.resultsSummary {
 	padding: 10px;
+	margin-top: 10px;
 	background-color: white;
 	border-radius: 3px;
 	font-size: 18px;
+}
+
+.cocktailOfTheDayHdr {
+	text-align: center;
+	padding-bottom: 10px;
+	margin-bottom: 10px;
+	border-bottom: 1px solid #d8d8d8;
 }
