--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@ input::placeholder {
 	visibility: hidden;
 }
 
-.modalCloseBtn.modalCloseBtnShown {
+.modalized .modalCloseBtn {
 	visibility: visible;
 }
 
