--- a/css/upperContainer.css
+++ b/css/upperContainer.css
@@ -132,11 +132,29 @@ input::placeholder {
 	font-style: italic;
 }
 
-.showFavoritesAction {
+.resultsSummaryContainer {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.resultsSummary {
+	padding: 10px;
+	margin-top: 10px;
+	background-color: white;
+	border-radius: 3px;
+	font-size: 18px;
+}
+
+.favoritesAction {
 	cursor: pointer;
 	color: #b3c6d0;
 	transition: color 0.1 ease-out;
 }
-.showFavoritesAction:hover {
+.favoritesAction:hover {
 	color: #4c5459;
+}
+
+.favoritesAction.hidden {
+	visibility: hidden;
 }
