--- a/css/upperContainer.css
+++ b/css/upperContainer.css
@@ -40,7 +40,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	margin-top: 20px;
+	margin: 10px 0;
 }
 
 .inputsColumn {
@@ -120,16 +120,11 @@ input::placeholder {
 	box-shadow: 2px 2px 2px 0px #c4d1d9;
 }
 
-.subheadCtaContainer {
-	display: flex;
-	justify-content: space-between;
+.subheadCta {
+	font-style: italic;
 	margin-top: 5px;
 	padding-bottom: 5px;
 	border-bottom: 1px solid #d8d8d8;
-}
-
-.subheadCta {
-	font-style: italic;
 }
 
 .resultsSummaryContainer {
@@ -139,7 +134,6 @@ input::placeholder {
 }
 
 .resultsSummary {
-	padding: 10px;
 	margin-top: 10px;
 	background-color: white;
 	border-radius: 3px;
@@ -149,12 +143,20 @@ input::placeholder {
 .favoritesAction {
 	cursor: pointer;
 	color: #b3c6d0;
-	transition: color 0.1 ease-out;
+	font-weight: 600;
+	transition: color 0.1s ease-out;
 }
 .favoritesAction:hover {
 	color: #4c5459;
 }
+.favoritesAction.showFavoritesAction {
+	margin-top: 5px;
+	text-align: right;
+}
+.favoritesAction.clearFavoritesAction {
+	margin-top: 10px;
+}
 
 .favoritesAction.hidden {
-	visibility: hidden;
+	display: none;
 }
