--- a/css/upperContainer.css
+++ b/css/upperContainer.css
@@ -86,8 +86,8 @@ input::placeholder {
 .suggestion {
 	height: 30px;
 	margin-bottom: 7px;
-	display: block;
-	background-color: white;
+	display: flex;
+	align-items: center;
 	border: 1px solid #d5e1e8;
 	border-radius: 3px;
 	text-align: left;
@@ -101,7 +101,8 @@ input::placeholder {
 }
 
 .addSuggestion {
-	margin-right: 3px;
+	width: 16px;
+	margin-right: 5px;
 	color: #8da3b0;
 }
 
@@ -141,13 +142,7 @@ input::placeholder {
 }
 
 .favoritesAction {
-	cursor: pointer;
-	color: #b3c6d0;
-	font-weight: 600;
-	transition: color 0.1s ease-out;
-}
-.favoritesAction:hover {
-	color: #4c5459;
+	display: block;
 }
 .favoritesAction.showFavoritesAction {
 	margin-top: 5px;
@@ -156,7 +151,17 @@ input::placeholder {
 .favoritesAction.clearFavoritesAction {
 	margin-top: 10px;
 }
-
 .favoritesAction.hidden {
 	display: none;
+}
+
+.favoritesAction span {
+	cursor: pointer;
+	color: #b3c6d0;
+	font-weight: 600;
+	transition: color 0.1s ease-out;
+}
+
+.favoritesAction span:hover {
+	color: #4c5459;
 }
