--- a/css/upperContainer.css
+++ b/css/upperContainer.css
@@ -149,7 +149,9 @@ input::placeholder {
 }
 
 .favoritesAction {
-	display: block;
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
 }
 .favoritesAction.showFavoritesAction {
 	margin-top: 5px;
@@ -162,13 +164,13 @@ input::placeholder {
 	display: none;
 }
 
-.favoritesAction span {
+.favoritesAction div {
 	cursor: pointer;
 	color: #b3c6d0;
 	font-weight: 600;
 	transition: color 0.1s ease-out;
 }
 
-.favoritesAction span:hover {
+.favoritesAction div:hover {
 	color: #4c5459;
 }
