--- a/css/recipe.css
+++ b/css/recipe.css
@@ -69,21 +69,27 @@ h2.recipeTitle {
 }
 
 .rest .recipeLink {
+	display: flex;
+	align-items: baseline;
 	color: #4c5459;
+	transition: color 0.2s;
 	cursor: pointer;
-	text-decoration: underline;
-	text-underline-position: under;
 }
 .rest .recipeLink:hover {
 	color: #b3c6d0;
+}
+
+.linkIcon {
+	margin-left: 4px;
+	width: 12px;
 }
 
 .glassIcon {
 	/* 
 		Keep in sync with
 		.favIconContainer.width
-		 so that .recipeTitle will
-		 always be centered.
+		so that .recipeTitle will
+		always be centered.
 	*/
 	width: 27px;
 }
