--- a/css/upperContainer.css
+++ b/css/upperContainer.css
@@ -61,6 +61,7 @@
 
 .inputRow {
 	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
 	margin-bottom: 15px;
 	width: 100%;
@@ -72,7 +73,7 @@
 
 .upperContainer input {
 	height: 25px;
-	width: 100%;
+	width: 90%;
 	padding-left: 8px;
 	opacity: 1;
 	border: 1px solid gray;
