--- a/css/modal.css
+++ b/css/modal.css
@@ -32,12 +32,28 @@
 	width: 360px;
 }
 
-
-.closeIcon.modalCloseBtn {
+.modalActionRow {
+	display: flex;
 	align-self: flex-end;
 	margin-bottom: 10px;
+}
+
+.modalAction {
 	background-color: white;
 	border-radius: 4px;
+}
+
+.shareAction {
+	color: #6b6c6d;
+	font-size: 10px;
+	cursor: pointer;
+	margin-right: 10px;
+	border: 0;
+	width: 60px;
+}
+
+.shareAction:hover {
+	box-shadow: 0px 1px 2px 0px #c4d1d9;
 }
 
 .multiplier {
