--- a/css/modal.css
+++ b/css/modal.css
@@ -43,7 +43,7 @@
 	border-radius: 4px;
 }
 
-.shareAction {
+.copyAction {
 	color: #6b6c6d;
 	font-size: 10px;
 	cursor: pointer;
@@ -52,7 +52,7 @@
 	width: 60px;
 }
 
-.shareAction:hover {
+.copyAction:hover {
 	box-shadow: 0px 1px 2px 0px #c4d1d9;
 }
 
